# KrakenTradingBot

./: .gitignore  Cargo.toml  README.md  run.sh
src/: main.rs
