[package]
name = "kraken_trading_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krakenrs = "5.2.3"
rust_decimal = "1.28.1"
dotenv = "0.15.0"
once_cell = "1.10.0" # lazy mutex
serde_any = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
teloxide = { version = "0.11.3", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["full"] }